test/pass/exceptions/catch_through_foreign_call.lly
define f(a: Integer) : Integer
{
    raise ValueError::new("")
}

for i in 0...5: {
    var v = [1, 2, 3]
    try: {
        v.map(f)
    except Exception:

    }
}
