test/fail/lambdas/lambda_raise.lly
#[
SyntaxError: 'raise' not allowed in a lambda.
    from lambda_raise.lly:6
]#

var v = (|| raise ValueError("") )
